feat: Enhance order management with new endpoints and validation